sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_tuples.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("x"))),
    Edge(FreeVar(Variable("y"))),
    Operation(Tuple),
    Edge(BoundVar(VariableDef(
      var: Variable("a"),
      meta: None,
    ))),
    Edge(BoundVar(VariableDef(
      var: Variable("d"),
      meta: None,
    ))),
    Edge(Nil),
    Operation(Tuple),
    Edge(BoundVar(VariableDef(
      var: Variable("b"),
      meta: None,
    ))),
    Edge(BoundVar(VariableDef(
      var: Variable("c"),
      meta: None,
    ))),
    Edge(Nil),
    Operation(Detuple),
    Operation(Detuple),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((3, 2, 0)),
    Some((4, 2, 1)),
    Some((2, 5, 0)),
    Some((7, 6, 0)),
    Some((8, 6, 1)),
    Some((6, 9, 0)),
    Some((1, 10, 0)),
    Some((10, 8, 0)),
    Some((10, 4, 1)),
    Some((0, 11, 0)),
    Some((11, 3, 0)),
    Some((11, 7, 1)),
  ],
)
