sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_with_id.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("y"))),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(VariableDef(
          var: Variable("x"),
          meta: None,
        ))),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((0, 1, 0)),
  ],
)
