sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_with_none.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(Variable("x"))),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [],
)
